Fill README with some info